# Image-Processing

./: .gitignore  CMakeLists.txt  README.md
Analysis/: CMakeLists.txt  main.cpp
Color/: CMakeLists.txt  Color.cpp  Color.h  main.cpp
Enhancement/: CMakeLists.txt
ImageFormat/: CMakeLists.txt
Warping/: CMakeLists.txt  main.cpp
util/: FileIO.cpp  FileIO.h
